@@ -27,3 +27,4 @@ Yii 1.0.1:                   /yii-1.0.1/index.php
 Yii 1.0.1 with yiilite:      /yii-1.0.1/index2.php
 Zend 1.6.2:                  /zend-1.6.2/index.php
 Zend 1.7.2:                  /zend-1.7.2/index.php
+Zend 1.7.3:                  /zend-1.7.3/index.php
