@@ -1,3 +1,8 @@
+January 22, 2009
+================
+- upgraded all frameworks to their latest releases
+- changed the default action from a die() statement to an echo statement
+
 December 26, 2008
 =================
 - upgraded all frameworks to their latest releases
